{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 15,
  "lineage": "46033577-fb16-cbe9-b57f-2a3f1b4c56f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0288924191958a596",
            "arn": "arn:aws:ec2:us-east-1:300532207744:elastic-ip/eipalloc-0288924191958a596",
            "domain": "vpc",
            "id": "eipalloc-0288924191958a596",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-199-168-32.compute-1.amazonaws.com",
            "public_ip": "44.199.168.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300532207744:internet-gateway/igw-045e39a84ce54698b",
            "id": "igw-045e39a84ce54698b",
            "owner_id": "300532207744",
            "tags": {
              "Name": "devsecjobs-eks-igw"
            },
            "tags_all": {
              "Name": "devsecjobs-eks-igw"
            },
            "vpc_id": "vpc-0eb9413a11d42317f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0288924191958a596",
            "association_id": "eipassoc-0f7e4abaab7a94df6",
            "connectivity_type": "public",
            "id": "nat-045951c081271655d",
            "network_interface_id": "eni-0e30b4e17c1e17847",
            "private_ip": "10.0.15.241",
            "public_ip": "44.199.168.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04bbf38cf4c3c1cf6",
            "tags": {
              "Name": "devsecjobs-eks-nat"
            },
            "tags_all": {
              "Name": "devsecjobs-eks-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300532207744:route-table/rtb-0de45986e465f915c",
            "id": "rtb-0de45986e465f915c",
            "owner_id": "300532207744",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-045951c081271655d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devsecjobs-eks-private-rt"
            },
            "tags_all": {
              "Name": "devsecjobs-eks-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb9413a11d42317f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300532207744:route-table/rtb-04eb82d6e59250554",
            "id": "rtb-04eb82d6e59250554",
            "owner_id": "300532207744",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045e39a84ce54698b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devsecjobs-eks-public-rt"
            },
            "tags_all": {
              "Name": "devsecjobs-eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb9413a11d42317f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a6408878f8a4e49",
            "route_table_id": "rtb-0de45986e465f915c",
            "subnet_id": "subnet-0fbed2a3db0edf7fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da92b68c33d58e36",
            "route_table_id": "rtb-0de45986e465f915c",
            "subnet_id": "subnet-0f13e393e0c5859a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040b780870d7920c3",
            "route_table_id": "rtb-04eb82d6e59250554",
            "subnet_id": "subnet-04bbf38cf4c3c1cf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e748504b6d70e31",
            "route_table_id": "rtb-04eb82d6e59250554",
            "subnet_id": "subnet-0fa01a43766180319"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300532207744:subnet/subnet-0fbed2a3db0edf7fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbed2a3db0edf7fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300532207744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecjobs-eks-private-1",
              "kubernetes.io/cluster/devsecjobs-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devsecjobs-eks-private-1",
              "kubernetes.io/cluster/devsecjobs-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eb9413a11d42317f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300532207744:subnet/subnet-0f13e393e0c5859a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f13e393e0c5859a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300532207744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecjobs-eks-private-2",
              "kubernetes.io/cluster/devsecjobs-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devsecjobs-eks-private-2",
              "kubernetes.io/cluster/devsecjobs-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eb9413a11d42317f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300532207744:subnet/subnet-04bbf38cf4c3c1cf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bbf38cf4c3c1cf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300532207744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecjobs-eks-public-1",
              "kubernetes.io/cluster/devsecjobs-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devsecjobs-eks-public-1",
              "kubernetes.io/cluster/devsecjobs-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0eb9413a11d42317f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300532207744:subnet/subnet-0fa01a43766180319",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa01a43766180319",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300532207744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecjobs-eks-public-2",
              "kubernetes.io/cluster/devsecjobs-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devsecjobs-eks-public-2",
              "kubernetes.io/cluster/devsecjobs-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0eb9413a11d42317f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300532207744:vpc/vpc-0eb9413a11d42317f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01451eaf35043a8f2",
            "default_route_table_id": "rtb-0befb887cfacbd1dc",
            "default_security_group_id": "sg-042d955ece1980a51",
            "dhcp_options_id": "dopt-05d292dc128137fdf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb9413a11d42317f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0befb887cfacbd1dc",
            "owner_id": "300532207744",
            "tags": {
              "Name": "devsecjobs-eks-vpc"
            },
            "tags_all": {
              "Name": "devsecjobs-eks-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}